Bug 20524 - xserver crash inside XIGetKnownProperty
Summary: xserver crash inside XIGetKnownProperty
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Input/Core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 20497 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-07 10:15 UTC by Tomas Carnecky
Modified: 2009-03-08 16:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log showing the crash/backtrace (20.25 KB, text/plain)
2009-03-07 10:15 UTC, Tomas Carnecky
no flags Details

Description Tomas Carnecky 2009-03-07 10:15:26 UTC
Created attachment 23636 [details]
Xorg.0.log showing the crash/backtrace

Setup: gentoo linux, mesa/drm/xserver/drivers from git

git-bisect identified a706dd8771 (include: add a range of button labels) as the offending commit.

I have no idea why the symbols in evdev_drv.so don't show up. I build everything with '-O2 -g -fno-omit-frame-pointer' (but not --enable-debug)
Comment 1 Julien Cristau 2009-03-08 04:39:34 UTC
*** Bug 20497 has been marked as a duplicate of this bug. ***
Comment 2 Peter Hutterer 2009-03-08 05:18:16 UTC
Please attach your Xorg log. I can see a patch that may trigger this bug but I
need to verify what your devices claim to be.
Comment 3 Peter Hutterer 2009-03-08 05:21:14 UTC
Yeesh, nevermind. it's getting late here...
Comment 4 Peter Hutterer 2009-03-08 16:26:06 UTC
Fixed with 2c49e21a815632fc1addd04dde96592237757a2e. Thanks for reporting.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.